[project]
name = "alembic-verify"
version = "1.0.0"
authors = [
    { name = "Fabrizio Romano", email = "gianchub@gmail.com" },
    { name = "Mark McArdle", email = "m.mc4rdle@gmail.com" },
]
description = "A library to verify alembic migrations."
readme = "README.md"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Operating System :: OS Independent",
]
keywords = ["alembic", "migration", "verify", "sqlalchemy"]
dependencies = [
    "alembic>=1.8",
    "sqlalchemy>=1.4,<3",
    "sqlalchemy-utils>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ty",
]
lint = [
    "ruff~=0.14.13",
]
test = [
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "psycopg2-binary",
]
all = ["alembic-verify[dev,lint,test]"]

[project.urls]
Homepage = "https://github.com/gianchub/alembic-verify"
Issues = "https://github.com/gianchub/alembic-verify/issues"
License = "https://github.com/gianchub/alembic-verify/blob/master/LICENSE"

[project.entry-points."pytest11"]
pytest_alembic_verify = "alembicverify.pyfixtures"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/"]
excludes = ["test/", "**/__pycache__/", "*.pyc"]

[tool.pdm.version]
source = "file"
path = "src/alembicverify/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "E701",  # multiple statements on one line (colon)
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["src/alembicverify", "test"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ty.src]
include = ["src"]

[tool.coverage.run]
branch = true
source = ["src/alembicverify"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = [".", "src"]

addopts = [
    "--strict-markers",
]

faulthandler_timeout = 10

